--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         clientID: "47409e08620e5cf352c5",
         clientSecret: "45b555100c165f73864a50a9cc33ee5f3d2ea6ba",
         repo: "docsify-test",
-        owner: "Alegria",
-        admin: ["Alegria"],
+        owner: "toAle",
+        admin: ["toAle"],
         // facebook-like distraction free mode
         distractionFreeMode: false,
       });
