--- a/index.html
+++ b/index.html
@@ -42,15 +42,14 @@
         plugins: [],
       };
     </script>
-    <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+    <script src="//unpkg.com/docsify/lib/docsify.min.js" data-ga="G-FM94TH5D6V"></script>
     <!--Java代码高亮-->
     <script src="//unpkg.com/prismjs/components/prism-java.js"></script>
     <!--全文搜索,直接用官方提供的无法生效-->
     <script src="https://cdn.bootcss.com/docsify/4.5.9/plugins/search.min.js"></script>
-    <!--谷歌统计
-  <script src="//unpkg.com/docsify" data-ga="UA-138586553-1"></script>
-  <script src="//unpkg.com/docsify/lib/plugins/ga.js"></script>
-  -->
+    <!--谷歌统计-->
+    <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/ga.min.js"></script>
+  
     <!-- 复制到剪贴板 -->
     <script src="//unpkg.com/docsify-copy-code"></script>
     <!-- 图片缩放 -->
