--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         plugins: [],
       };
     </script>
-    <script src="//unpkg.com/docsify/lib/docsify.min.js" data-ga="G-FM94TH5D6V"></script>
+    <script src="//unpkg.com/docsify/lib/docsify.min.js" data-ga="UA-249513075-1"></script>
     <!--Java代码高亮-->
     <script src="//unpkg.com/prismjs/components/prism-java.js"></script>
     <!--全文搜索,直接用官方提供的无法生效-->
