--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         maxLevel: 5, //最大支持渲染的标题层级
         subMaxLevel: 3,
         coverpage: false, //封面,_coverpage.md
-//         homepage:
-//           "https://jc-middlend-uos.oss-cn-hangzhou.aliyuncs.com/middlend/uos/manufacture/qc/wiP4pXvF9I.md",
+        homepage: "./docs/a-update.md",
         auto2top: true, //切换页面后是否自动跳转到页面顶部
         logo: "./pictures/logo.svg",
         search: {
